# lv_port_esp32

components/uart0/: CMakeLists.txt  Kconfig.projbuild
components/uart0/include/: Utf8ToGbk.h  key.h  led.h  uart0.h  wifi.h
components/uart0/src/: Utf8ToGbk.c  key.c  led.c  uart0.c  wifi.c
main/: main.c
